--- a/hw1/2_pytorch/filter-viz.ipynb
+++ b/hw1/2_pytorch/filter-viz.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,19 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "figure saved\n"
+     ]
+    }
+   ],
    "source": [
     "# collect all the weights\n",
-    "w = None\n",
+    "w = softmax_model.linear.weight.detach().numpy()\n",
     "#############################################################################\n",
     "# TODO: Extract the weight matrix (without bias) from softmax_model, convert\n",
     "# it to a numpy array with shape (10, 32, 32, 3), and assign this array to w.\n",
     "# The first dimension should be for channels, then height, width, and color.\n",
     "# This step depends on how you implemented models.softmax.Softmax.\n",
     "#############################################################################\n",
-    "pass\n",
+    "w = np.transpose(w.reshape(10, 3, 32, 32), (0, 2, 3, 1))\n",
+    "\n",
     "#############################################################################\n",
     "#                             END OF YOUR CODE                              #\n",
     "#############################################################################\n",
@@ -69,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "figure saved as a grid!\n"
+     ]
+    }
+   ],
    "source": [
     "# vis_utils.py has helper code to view multiple filters in single image. Use this to visuzlize \n",
     "# neural network adn convnets. \n",
@@ -82,6 +99,13 @@
     "# padding is the space between images. Make sure that w is of shape: (N,H,W,C)\n",
     "print('figure saved as a grid!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -100,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
