--- a/hw2/StyleTransfer-PyTorch.ipynb
+++ b/hw2/StyleTransfer-PyTorch.ipynb
@@ -225,7 +225,7 @@
     "    # and gradient can not be derived.                                           #\n",
     "    ##############################################################################\n",
     "    content_diff = torch.sum((content_original - content_current).pow(2), 1)\n",
-    "    content_loss = content_weight * trch.sum(content_diff)\n",
+    "    content_loss = content_weight * torch.sum(content_diff)\n",
     "    \n",
     "    return content_loss\n",
     "    ##############################################################################\n",
